--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 
 <body>
-
-  <div class="container">
-    <img src="./images/image-qr-code.png" alt="">
-    <h1>Improve your front-end skills by building projects</h1>
-    <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-  </div>
-
+  
+  <main>
+    <div class="container">
+      <img class="qr-img" src="./images/image-qr-code.png" alt="">
+      <h1 class="qr-header">Improve your front-end skills by building projects</h1>
+      <p class="qr-parg" > Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+  </main>
 
 
 </body>
